--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -21,10 +21,9 @@ default: &default
   # docker-composeで指定しているDBのユーザー名
   password: password
   # docker-composeで指定しているDBのパスワード
-
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
