--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,34 @@
 version: "3"
 services:
+  nginx:
+    container_name: nginx
+    image: nginx:1.23.3
+    ports:
+      - "80:80"
+      # - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./api/tmp:/api/tmp
+      - ./api/public:/api/public
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
+      - front
+
   api:
     container_name: api
     build:
       context: ./api
     ports:
-      - "3001:3001"
+      - "3001:3000"
     depends_on:
       - db
     volumes:
       - ./api:/app/
-      - public-data:/app/public
-      - tmp-data:/app/tmp
-      - log-data:/app/log
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails server -b '0.0.0.0'"
+    environment:
+      TZ: Asia/Tokyo
+      RAILS_ENV: development
+    # command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails server -b '0.0.0.0'"
 
   front:
     container_name: front
@@ -24,19 +39,6 @@ services:
     volumes:
       - ./front:/app/
     command: bash -c "npm install && npm run dev"
-
-  nginx:
-    container_name: nginx
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./api/public:/api/public
-      - ./api/tmp:/api/tmp
-    depends_on:
-      - front
-      - api
 
   # certbot:
   #   image: certbot/certbot
@@ -54,8 +56,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: app_development
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
